# centraleconnect

./: README.md  next.config.js  next.config.ts  package-lock.json  package.json  prebuild-check.js  prisma.config.ts  tailwind.config.ts
.github/workflows/: firebase-app-hosting-deploy.yml
centraleconnect/.github/workflows/: firebase-app-hosting-deploy.yml
docs/: DEBUG_ALARMS_PAGE.md  DEBUG_PROCEDURES_PAGE.md  GUIDE_REINSTALLATION.md  INSTALLATION.md  PID_INTEGRATION.md  REPORT_SCADA_PID_NAVIGATION.md  SCADA_ARCHITECTURE.md  SCADA_INTEGRATION_PLAN.md  SETUP_SIMULATOR.md  WEBSOCKET_FALLBACK.md  blueprint.md
patches/: next-themes+0.3.0.patch
prisma/: ccpp.db  dev.db  schema.backup.20260128_130441.prisma  schema.prisma
prisma/migrations/20260210172107_descriptive_name/: migration.sql
public/assets/data/: pid_tags_sousse.csv
public/models/: vad.worklet.js
scripts/: build.ps1  check-fixed.ts  copy-vad-assets.js  download-vosk-model.js  generate-scada-mapping.ts  git-updater.ps1  git-updater.sh  seed-pid-assets.ts  seed.ts  setup-ai-models-node.js  setup-ai-models-v2.sh  setup-ai-models.sh  update-app.ps1  update-app.sh  verify-tables.ts
src/: next.config.js  next.config.ts
src-tauri/: Cargo.toml  commands.rs  main.rs  scada.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  main.rs  models.rs  scada.rs
src-tauri/src/vision/: equipment_detector.rs
src/ai/: dev.ts
src/ai/flows/: assistant-flow.ts  search-parser-flow.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(main)/: layout.tsx
src/app/logbook/: page.tsx
src/app/test-ai/: page.tsx
src/app/test-detection/: page.tsx
src/app/test-shapes/: page.tsx
src/assets/data/: pid_tags_sousse.csv
src/assets/master-data/: B0.json  B1.json  B2.json  B3.json  C0.json  TG.json  TG1.json  TG2.json  alarms.json  central.json  components.json  groups.json  manifest.json  parameters.json  pid-assets.json  pid-tags.csv  procedures.json  pupitre-data.json  visual-database.json  zones.json
src/components/: PidViewer.tsx  ShapeEditor.tsx  camera-view.tsx  ccpp-diagram.tsx  component-detail-view.tsx  equipment-detail-view.tsx  history-chart.tsx  logbook.tsx  maintenance-prediction-widget.tsx  procedure-execution-view.tsx  scada-realtime.tsx  synoptic-view.tsx  system-hierarchy-browser.tsx  vocal-assistant.tsx
src/components/[id]/: page.tsx
src/components/logbook/: LogbookView.tsx
src/components/ui/: calendar.tsx  sidebar.tsx
src/contexts/: pid-viewer-context.tsx  sync-context.tsx
src/docs/: PRISMA_WORKFLOW.md
src/hooks/: use-camera.ts  use-equipment-data.ts  use-pid-navigation.ts  use-scada-data.ts  use-vision-detection.ts  use-visual-search.ts  use-vosk-recognizer.ts
src/lib/: ably-client.ts  alarms-service.ts  component-service.ts  database.ts  db-service.ts  db.ts  image-hashing.ts  interactions.ts  logger.ts  pid-service.ts  placeholder-images.json  prisma.ts  procedures-service.ts  tauri-client.ts
src/lib/calendar/: security.ts
src/scripts/: seed.ts
src/types/: db.ts  global.d.ts  vad-web.d.ts
src/workers/: vosk.worker.ts
(+90 files in other folders)
