
[package]
name = "centraleconnect"
version = "0.1.0"
description = "Industrial Monitoring for CCPP"
authors = ["Firebase Studio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.6.0", features = [] }

[dependencies]
tauri = { version = "1.6.0", features = [ "dialog-save", "shell-open", "dialog-open", "fs-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Épinglage à une version spécifique pour résoudre le conflit de types Duration/TimeDelta
chrono = { version = "=0.4.22", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
lazy_static = "1.4"
thiserror = "1.0"

# This version is known to be stable and the `bundled` feature prevents system-level conflicts.
rusqlite = { version = "0.29.0", features = ["bundled"] }


[features]
custom-protocol = ["tauri/custom-protocol"]
