
[package]
name = "centraleconnect"
version = "0.1.0"
description = "Industrial Monitoring for CCPP"
authors = ["Firebase Studio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.0", features = [ "dialog-save", "shell-open", "dialog-open", "fs-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "=0.4.22", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
lazy_static = "1.4"
thiserror = "1.0"
dotenv = "0.15"

# Local DB - Pinned version with bundled SQLite to avoid system conflicts
rusqlite = { version = "0.29.0", features = ["bundled"] }

# Remote DB (Postgres) - Carefully configured to avoid conflicts
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "macros"] }
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

