
[package]
name = "centraleconnect"
version = "0.1.0"
description = "Industrial Monitoring for CCPP"
authors = ["Firebase Studio"]
edition = "2021"

[build-dependencies]
tauri-build = "2.0.0-rc.8"

[dependencies]
tauri = "2.0.0-rc.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "=0.4.22", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
lazy_static = "1.4"
thiserror = "1.0"
dotenv = "0.15"
tauri-plugin-shell = "2.0.0-rc.8"
tauri-plugin-window = "2.0.0-rc.8"
tauri-plugin-dialog = "2.0.0-rc.8"
tauri-plugin-fs = "2.0.0-rc.8"

# Local DB - Pinned version with bundled SQLite to avoid system conflicts
rusqlite = { version = "0.29.0", features = ["bundled"] }

# Remote DB (Postgres) - Carefully configured to avoid conflicts
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "macros"] }
tokio = { version = "1", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

